# ecosim

./: .gitignore  .readthedocs.yaml  README.md  main.py  pyproject.toml  requirements.txt
Notebooks/: ecosim_demonstartion.ipynb  ecosim_quickstart.ipynb
configs/: foodweb_config.json  terrain_config.json
core/: foodweb.py  organism.py  terrain.py
docs/: README.rst  conf.py  core.rst  heatmap.rst  index.rst  logic.rst  main.rst  mainsimulation.rst  model.rst  modules.rst  overview.rst  readme.rst  requirements.txt  setup.rst  simulation.rst  statistic_tools.rst  statistics.rst  visualizer.rst
docs/api/: modules.rst
docs/img/: custom.css
docs/source/: conf.py
logic/: behavior.py  reproduction.py
mainsimulation/: main.py
simulation/: engine.py
statistic_tools/: heatmap.py  population.py
statistics/: statistics.py
tests/: test_engine.py  test_organism.py  test_statistics.py
visualizer/: plot.py
